# rust-duckdb-workaround

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
duckdb-polars/: Cargo.toml
duckdb-polars/src/: export.rs  lib.rs
duckdb-polars/tests/fixtures/: data1.jsonl
